Add new examples for comparatpr and comparable